--- a/level 1 task1 landing page/landing page.html
+++ b/level 1 task1 landing page/landing page.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="resources\images\favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="resources\css\landing page.css">
-    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
+    <title>ABHISHEKNetflix India - Watch TV Shows Online, Watch Movies Online</title>
 
 
 </head>
@@ -135,7 +135,7 @@
     </div>
 
     <div class="footer">
-        <h2>Any Questions? <br> Call +91 6305677547</h2>
+        <h2>Any Questions? <br> Call +91 7368846838</h2>
 
         <div class="row">
             <div class="col">
